--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,35 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Righteous', cursive;
+  /* font-family: 'Righteous', cursive; */
+}
+
+header {
+  background-image: linear-gradient(#45454551, rgba(0, 0, 0, 0.281)) , url('https://images.pexels.com/photos/218863/pexels-photo-218863.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+  height: 100vh;
+  object-fit: cover;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero {
+  background: linear-gradient(#45454551, rgba(0, 0, 0, 0.281));
+  -webkit-box-shadow: -26px 9px 30px -8px rgba(0,0,0,1);
+  -moz-box-shadow: -26px 9px 30px -8px rgba(0,0,0,1);
+  box-shadow: -26px 9px 30px -8px rgba(0,0,0,0.7);
+}
+
+.heading-name {
+  font-family: 'Satisfy', cursive;
+  color: white;
+  font-size: 4.5rem;
+  text-shadow: 2px 2px #494949;
+  margin-top: 1.5rem;
+  width: 75%;
+}
+
+.heading-title {
+  font-size: 4.5rem;
 }
