--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,48 @@ nav a:hover:nth-child(1), .github:hover {
   text-align: center;
   font-size: 3.5rem;
 }
+
+.project-container {
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.project-container:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.project-description {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white
+}
+
+.project-description h2 {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 600;
+
+}
+
+.project-description p {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.image {
+  width: 500px;
+  border-radius: 5px;
+}
+
+.image:hover {
+  opacity: 0.1;
+}
+
+.image:hover + .project-description {
+  display: block;
+}
