--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ nav a:hover:nth-child(1), .github:hover {
   text-shadow: 2px 2px #252525;
 }
 
-.hero p {
+.introduction {
   width: 50%;
   font-size: 1.5rem;
   text-align: center;
@@ -145,4 +145,71 @@ nav a:hover:nth-child(1), .github:hover {
 
 .image:hover + .project-description {
   display: block;
+}
+
+#contact {
+  background: linear-gradient(#0e0d0d51, rgba(0, 0, 0, 0.281)) , #050505;
+}
+
+@media only screen and (max-width: 1023px) {
+  #home {
+    height: 60vh;
+  }
+
+  .lg-screen-nav, .story-container img, .hero a, .projects-grid h2, .projects-grid p {
+    display: none;
+  }
+
+  .story-container {
+    flex-direction: column;
+  }
+
+  .heading-name, .heading-title {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .heading-name {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .heading-title {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+  }
+
+  .introduction, .story-container span {
+    font-size: 1rem;
+    width: 80%;
+  }
+
+  .introduction {
+    margin: 0;
+  }
+
+  .story-container img {
+    width: 300px;
+  }
+
+  .hero span {
+    font-size: 1.5rem;
+  }
+
+  .story-heading {
+    font-size: 2rem;
+  }
+
+  .project-heading {
+    margin-top: 3rem;
+    font-size: 2.5rem;
+  }
+
+  #projects {
+    justify-content: start;
+  }
+
+  .projects-grid {
+    margin-top: 2rem;
+  }
 }
